--- a/.env-sample
+++ b/.env-sample
@@ -6,3 +6,14 @@ DB_NAME=
 DB_USER=
 DB_PASSWORD=
 DB_HOST=
+
+# Email configuration
+EMAIL_HOST=
+EMAIL_PORT=
+EMAIL_HOST_USER=
+EMAIL_HOST_PASSWORD=
+EMAIL_USE_TLS=
+DEFAULT_FROM_EMAIL=
+
+# Google api
+GOOGLE_API_KEY=
